--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "p5": "^1.4.1",
+    "v-scroll-lock": "^1.3.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13"
   },
