fix background color

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,8 @@
     "lib": ["esnext", "dom"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/components/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "pwa":{
+    "themeColor": "#efeff0",
+  }
 }
