--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^17.0.21",
     "@types/p5": "^1.4.1",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "p5": "^1.4.1",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
