--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "^5.1.3",
     "p5": "^1.4.1",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.13"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
