--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/p5": "^1.4.1",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
     "p5": "^1.4.1",
     "vue": "^3.2.25",
     "vue-router": "4"
