--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/jquery": "^3.5.14",
     "@types/node": "^17.0.21",
     "@types/p5": "^1.4.1",
     "axios": "^0.26.1",
