--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.9.0",
     "@types/jquery": "^3.5.14",
     "@types/node": "^17.0.21",
     "@types/p5": "^1.4.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "jquery": "^3.6.0",
     "p5": "^1.4.1",
+    "uuid": "^8.3.2",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
